[gd_scene load_steps=4 format=3 uid="uid://cplcs76y7q8b"]

[ext_resource type="Script" path="res://scenes/ui/card_menu_ui.gd" id="1_pe8yl"]
[ext_resource type="Resource" uid="uid://bhsgjlhr8xhye" path="res://characters/warrior/cards/warrior_axe_attack.tres" id="2_5dqys"]
[ext_resource type="PackedScene" uid="uid://kcvbkrl0liul" path="res://scenes/ui/card_visuals.tscn" id="3_i4x1x"]

[node name="CardMenuUI" type="CenterContainer"]
offset_right = 25.0
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("1_pe8yl")
card = ExtResource("2_5dqys")

[node name="Visuals" parent="." instance=ExtResource("3_i4x1x")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_visuals_mouse_exited"]
[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
